[package]
name = "typstdriver_rs"
edition = "2024"
publish = false
rust-version = "1.92"

[lib]
crate-type = ["staticlib"]

[dependencies]
cxx = "1.0.186"

codex = "0.3"
typst = "0.15.0"
typst-eval = "0.15.0"
typst-layout = "0.15.0"
typst-pdf = "0.15.0"
typst-render = "0.15.0"
typst-ide = "0.15.0"
typst-kit = { version = "0.15.0", default-features = false, features = ["embedded-fonts", "scan-fonts"] }

anyhow = "1"
once_cell = "1"
serde = "1"
serde_json = "1"
time = { version = "0.3", features = ["parsing"] }
unicode-math-class = "0.1"
unicode-segmentation = "1.12"
unicode_names2 = "1.3"
xattr = { version = "1.5", optional = true }

# We don't actually need IDNA support - pin a no-op adapter
idna_adapter = "=1.0.0"

[features]
flatpak = ["dep:xattr"]

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = "thin"
